# todolist

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  seed.py
.github/workflows/: run_unit_tests.yml
alembic/versions/: 83aff8f8d1e1_initial_migration.py  83aff8f8d1e1_your_migration_message.py
myapp/: README.md  main.py  pyproject.toml
myapp/application/commands/: command_handler.py  command_handler_factory.py  create_task_command_handler.py  create_todo_list_command_handler.py  delete_task_command_handler.py  get_todo_list_command_handler.py  update_task_command_handler.py
myapp/application/services/: todo_service.py
myapp/domain/: criteria.py  exceptions.py  kernel.py  task.py  title.py  todo.py
myapp/infrastructure/datasources/: tasks_data_source.py  todo_data_source.py
myapp/infrastructure/db/: database.py  models.py
myapp/infrastructure/repositories/: to_do_repository.py
myapp/infrastructure/routers/: exception_handlers.py  todo_routers.py
myapp/tests/application/commands/: test_command_handler_factory.py  test_create_todo_list_command_handler.py  test_delete_task_command_handler.py  test_get_todo_list_command_handler.py  test_update_task_command_handler.py
myapp/tests/application/services/: tests_todo_service.py
myapp/tests/domain/: test_todo.py  tests_task.py  tests_title.py
