[tool.poetry]
name = "myapp"
version = "0.1.0"
description = "testing"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
redis = "^5.1.0"
asyncio-redis = "^0.16.0"
pydantic = "^2.9.2"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
